# da-fits

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml
dafits/: __init__.py  core.py  delayed.py  io.py  read.py
tests/: __init__.py  test_distributed.py  test_local.py  test_package.py
